--- a/RandomGameSkill.Tests/RandomGameSkill.Tests.csproj
+++ b/RandomGameSkill.Tests/RandomGameSkill.Tests.csproj
@@ -12,6 +12,6 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\RandomGame\RandomGame.csproj" />
+    <ProjectReference Include="..\RandomGameSkill\RandomGameSkill.csproj" />
   </ItemGroup>
 </Project>
