--- a/RandomGameSkill/RandomGameSkill.csproj
+++ b/RandomGameSkill/RandomGameSkill.csproj
@@ -5,16 +5,9 @@
     <AWSProjectType>Lambda</AWSProjectType>
     <!-- This property makes the build directory similar to a publish directory and helps the AWS .NET Lambda Mock Test Tool find project dependencies. -->
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
-    <AssemblyName>NumberGameSkill</AssemblyName>
-    <RootNamespace>NumberGameSkill</RootNamespace>
-  </PropertyGroup>
-  <ItemGroup>
-    <Compile Remove="Function - Copy.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Remove="apl.txt" />
-    <None Remove="data.txt" />
-  </ItemGroup>
+    <AssemblyName>RandomGameSkill</AssemblyName>
+    <RootNamespace>RandomGameSkill</RootNamespace>
+  </PropertyGroup>  
   <ItemGroup>
     <PackageReference Include="Alexa.NET" Version="1.19.0" />
     <PackageReference Include="Alexa.NET.APL" Version="7.5.0" />
