--- a/RandomGameSkill/RandomGameSkill.csproj
+++ b/RandomGameSkill/RandomGameSkill.csproj
@@ -17,5 +17,8 @@
     <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.2.0" />
     <PackageReference Include="Amazon.Lambda.DynamoDBEvents" Version="2.1.0" />
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.2.1" />
+  </ItemGroup>  
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
 </Project>
